force-app/main/default/objects/Candidate_Assessment__c/Candidate_Assessment__c.object-meta.xml
<CustomObject>
    <label>Candidate Assessment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Candidate Assessment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>