force-app/main/default/objects/Candidate_Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Behavioral</fullName>
            </value>
            <value>
                <fullName>Emergency Drill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>