force-app/main/default/objects/Candidate_Assessment__c/fields/Evaluated_By__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Candidate_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>