force-app/main/default/objects/Candidate_Assessment__c/fields/Job_Posting__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job_Posting</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Candidate Assessments</relationshipLabel>
    <relationshipName>Candidate_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>